Update dl4j_component_requirements.md